fixed alignment

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -414,8 +414,6 @@
 
  .carousel.vertical {
   height: 300px;
-  padding-left: 30px;
-  padding-right: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
 }
@@ -498,8 +496,6 @@
 
   .carousel.vertical {
     height: 500px;
-    padding-left: 50px;
-    padding-right: 40px;
     margin-top: 0;
     margin-bottom: 0;
   }
@@ -512,7 +508,8 @@
 
   .carousel.vertical {
     height: 600px;
-    width: 1100px;
+    max-width: 1200px;
+    margin: auto;
   }
 }
 
@@ -679,9 +676,7 @@
 
 /* Full width carousel styles */
 .carousel-container .carousel-wrapper {
-  width: 100%;
   position: relative;
-  padding: 0;
   margin: auto;
 }
 
