--- a/templates/news-article/news-article.css
+++ b/templates/news-article/news-article.css
@@ -159,7 +159,7 @@ body.news-article main .news-article-sidebar ul {
 body.news-article main .section.details-sidebar {
     background-color: var(--news-bg-page-suite);
     margin-top: -340px;
-    padding-top: 350px;
+    padding-top: 380px;
     margin-bottom: 0;
 }
 
